--- a/index.html
+++ b/index.html
@@ -1,37 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
-     <!-- Primary Meta Tags -->
-     <title>Onlytax</title>
-     <meta name="title" content="Onlytax">
-     <meta name="description" content="Seamlessly collect your Solana token transfer fees">
-
-      <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://migration.selfchain.xyz/">
-    <meta property="og:title" content="Onlytax">
-    <meta property="og:description" content="Seamlessly collect your Solana token transfer fees">
-    <meta property="og:image:width" content="1280">
-    <meta property="og:image:height" content="720">
-    <meta property="og:image" content="/social.png">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://migration.selfchain.xyz/">
-    <meta property="twitter:title" content="Onlytax">
-    <meta property="twitter:description" content="Seamlessly collect your Solana token transfer fees">
-    <meta name="twitter:image:width" content="1280">
-    <meta name="twitter:image:height" content="720">
-    <meta property="twitter:image" content="/social.png">
-
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <title>Vite + Solid</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
