chore: update some css

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
     <meta property="twitter:image" content="/social.png">
 
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link href="./style/output.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
   </head>
-  <body>
+  <body data-theme="winter" style="scroll-padding-top: 5rem; scroll-behavior: smooth;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
