--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="twitter:image" content="/social.png">
 
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link href="./style/output.css" rel="stylesheet">
+    <!-- <link href="./style/output.css" rel="stylesheet"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
   </head>
