feat: decorate main page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
   </head>
-  <body data-theme="winter" style="scroll-padding-top: 5rem; scroll-behavior: smooth;">
+  <body data-theme="corporte" style="scroll-padding-top: 5rem; scroll-behavior: smooth;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
