chore: fix typo

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
      <!-- Primary Meta Tags -->
      <title>Onlytax</title>
      <meta name="title" content="Onlytax">
-     <meta name="description" content="Seamlessly collect your Solana token tranfer fees.">
+     <meta name="description" content="Seamlessly collect your Solana token transfer fees.">
 
       <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://onlytax.fun/">
     <meta property="og:title" content="Onlytax">
-    <meta property="og:description" content="Seamlessly collect your Solana token tranfer fees.">
+    <meta property="og:description" content="Seamlessly collect your Solana token transfer fees.">
     <meta property="og:image:width" content="1280">
     <meta property="og:image:height" content="720">
     <meta property="og:image" content="/social.png">
@@ -21,7 +21,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://onlytax.fun/">
     <meta property="twitter:title" content="Onlytax">
-    <meta property="twitter:description" content="Seamlessly collect your Solana token tranfer fees.">
+    <meta property="twitter:description" content="Seamlessly collect your Solana token transfer fees.">
     <meta name="twitter:image:width" content="1280">
     <meta name="twitter:image:height" content="720">
     <meta property="twitter:image" content="/social.png">
